<resources>
    <string name="app_name">Wellness360</string>
    <string name="push_yourself_to_the_limits">PUSH YOURSELF TO THE LIMITS</string>
    <string name="get_start">Get Start</string>
    <string name="fitness_starts_with_you">FITNESS STARTS WITH YOU!</string>
    <string name="next">NEXT</string>
    <string name="welcome_back_for_your_healthy_and_beautiful_body">Welcome Back! For Your Healthy And Beautiful Body!</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="signup">Sign Up</string>
    <string name="start">Start</string>
    <string name="start_workout">Start Workout</string>
    <string name="tip_2_focus_on_form_not_just_weight">Tip 2: Focus on form, not just weight.</string>
    <string name="tip_1_stay_hydrated_and_rest_between_workouts">Tip 1: Stay hydrated and rest between workouts.</string>
    <string name="fitness_tips">Fitness Tips</string>
    <string name="flexibility_stretching">Flexibility Stretching</string>
    <string name="improve_flexibility_and_mobility">Improve flexibility and mobility.</string>
    <string name="increase_stamina_with_these_cardio_exercises">Increase stamina with these cardio exercises.</string>
    <string name="cardio_workouts">Cardio Workouts</string>
    <string name="build_muscle_with_these_exercises">Build muscle with these exercises.</string>
    <string name="strength_training">Strength Training</string>
    <string name="workout_5">Workout 5</string>
    <string name="workout_4">Workout 4</string>
    <string name="workout_3">Workout 3</string>
    <string name="workout_2">Workout 2</string>
    <string name="workout_1">Workout 1</string>
    <string name="welcome_to_wellness360">Welcome to Wellness360</string>
    <string name="finish">FINISH</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password1">Password</string>
    <string name="ranushiamanda">Ranushi Amanda</string>
    <string name="my_gmail_com">it23224384@my.sliit.lk</string>
    <string name="welcome_guest_create_new_account_to_explore_the_creation">welcome Guest Create New Account to explore the creation</string>
    <string name="finish1">FINISH</string>
    <string name="come_back_tomorrow">-Come Back Tomorrow-</string>
    <string name="you_did_it_progress_looks_good_on_you">You did it! Progress looks good on you!</string>
    <string name="beginner">BEGINNER</string>
    <string name="gain_muscles_in_90_days">Gain Muscles in 90 Days</string>
    <string name="start1">START</string>
    <string name="nutrition_guide">Nutrition Guide</string>
    <string name="healthy_food">Healthy Food</string>
    <string name="fuel_your_body_with_the_right_nutrition_for_the_best_workout_results_drink_8_glasses_of_water_per_day_your_dream_body_will_meet_you_soon_keep_going">Fuel your body with the right nutrition for the best workout results. Drink 8 glasses of water per day.Your dream body will meet you soon. Keep going!</string>
    <string name="go_home_page">GO HOME PAGE</string>
    <string name="beginner1">BEGINNER</string>
    <string name="kickstart_your_fitness_journey_with_our_beginner_plan">~Kickstart your fitness journey with our Beginner Plan~</string>
    <string name="round_1_pushups">ROUND 1 : PUSHUPS</string>
    <string name="x100">x100</string>
    <string name="done">DONE</string>
    <string name="previous">Previous</string>
    <string name="next1">Next</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="done1">DONE</string>
    <string name="x50">x50</string>
    <string name="round_2_skippings">ROUND 2 : SKIPPINGS</string>
    <string name="kickstart_your_fitness_journey_with_our_beginner_plan1">~Kickstart your fitness journey with our Beginner Plan~</string>
    <string name="beginner123">BEGINNER</string>
    <string name="previous1">Previous</string>
    <string name="next12">Next</string>
    <string name="profile">PROFILE</string>
    <string name="full_name1">FULL NAME:</string>
    <string name="edward_hunks1">Edward HUNKS</string>
    <string name="email1">EMAIL :</string>
    <string name="edward002_gmail_com1">edward002@gmail.com</string>
    <string name="password123">PASSWORD :</string>
    <string name="edward022">Edward022</string>
    <string name="update1">UPDATE</string>
    <string name="come_back_tomorrow1">-Come Back Tomorrow-</string>
    <string name="you_did_it_progress_looks_good_on_you1">You did it! Progress looks good on you!</string>
    <string name="beginner1234">BEGINNER</string>
    <string name="gain_muscle_in_90_days12">Gain Muscle in 90 Days</string>
    <string name="start23">Start</string>
    <string name="profile121">Profile</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
</resources>