<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".Fragment1">



    <TextView
        android:id="@+id/tvHomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/welcome_to_wellness360"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvHomeTitle">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">


            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/workout_1"
                android:src="@drawable/layer1" />

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/workout_2"
                android:src="@drawable/layer2" />

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/workout_3"
                android:src="@drawable/layer3" />

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/workout_4"
                android:src="@drawable/layer1" />

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/workout_5"
                android:src="@drawable/layer2" />

        </LinearLayout>
    </HorizontalScrollView>

    <ScrollView
        android:id="@+id/verticalScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/tvCategory1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strength_training"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/tvCategory1Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build_muscle_with_these_exercises"
                android:textSize="16sp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/tvCategory2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cardio_workouts"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/tvCategory2Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/increase_stamina_with_these_cardio_exercises"
                android:textSize="16sp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/tvCategory3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flexibility_stretching"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/tvCategory3Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/improve_flexibility_and_mobility"
                android:textSize="16sp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/tvFitnessTipsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fitness_tips"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/tvFitnessTip1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_1_stay_hydrated_and_rest_between_workouts"
                android:textSize="16sp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/tvFitnessTip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_2_focus_on_form_not_just_weight"
                android:textSize="16sp"
                android:layout_marginBottom="8dp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnStartWorkout"
        android:layout_width="209dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/secondaryColor"
        android:text="@string/start_workout"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verticalScrollView"
        app:layout_constraintVertical_bias="0.063" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="130dp"
        android:layout_height="76dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="8dp"

        android:src="@drawable/profile"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
