<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".Nutritionguide">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="237dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:paddingBottom="8dp"
                android:text="@string/nutrition_guide"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="34sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="263dp"
                android:contentDescription="@string/healthy_food"
                android:scaleType="centerCrop"
                android:src="@drawable/healthyfood" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="163dp"
                android:fontFamily="sans-serif-black"
                android:paddingTop="8dp"
                android:text="@string/fuel_your_body_with_the_right_nutrition_for_the_best_workout_results_drink_8_glasses_of_water_per_day_your_dream_body_will_meet_you_soon_keep_going"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/gohome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondaryColor"
                android:text="@string/go_home_page"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>