<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Userprofile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.801" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="151dp"
            android:layout_height="142dp"
            app:layout_constraintBottom_toTopOf="@+id/textView28"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.738"
            app:srcCompat="@drawable/profile" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="118dp"
            android:layout_height="36dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/full_name1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/editTextText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.875" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="281dp"
            android:layout_height="57dp"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:inputType="text"
            android:text="@string/edward_hunks1"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.312"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.954" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="104dp"
            android:layout_height="29dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/email1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView29"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.861" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="282dp"
            android:layout_height="48dp"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:inputType="textEmailAddress"
            android:text="@string/edward002_gmail_com1"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView29"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.307"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/password123"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="303dp"
            android:layout_height="51dp"
            android:layout_marginStart="36dp"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:inputType="textPassword"
            android:text="@string/edward022"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.844" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="398dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="630dp">

            <Button
                android:id="@+id/button10"
                android:layout_width="395dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:backgroundTint="@color/secondaryColor"
                android:fontFamily="sans-serif-black"
                android:text="@string/update1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>